@@ -411,7 +411,8 @@ and calling C<x2goupdateoptionsstring 'nx/nx,clipboard=both,foo:50' '+-bar'
 
 =head1 AUTHOR
 
-This manual has been written by Mihai Moldovan <ionic@ionic.de> for the X2Go
-project (https://www.x2go.org).
+This manual has been written by
+Mihai Moldovan L<E<lt>ionic@ionic.deE<gt>|mailto:ionic@ionic.de> for the X2Go
+project (L<https://www.x2go.org>).
 
 =cut
