@@ -247,6 +247,9 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       non-functional.
     - {X2Go/Server/Agent/NX/Options.pm,
        x2goserver/lib/x2goupdateoptionsstring}: add =pod markers.
+    - {X2Go/Server/Agent/NX/Options.pm,
+       x2goserver/lib/x2goupdateoptionsstring}: update AUTHOR sections with
+       proper links.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
